Bug 171135 - Space is removed after a word of one letter at beginning of paragraph (specific options for AutoCorrect while typing)
Summary: Space is removed after a word of one letter at beginning of paragraph (specif...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.4.2 release
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2026-03-04 10:54 UTC by Jeppe Bundsgaard
Modified: 2026-05-19 17:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Bug shown (26.42 KB, application/vnd.oasis.opendocument.text)
2026-03-04 10:54 UTC, Jeppe Bundsgaard
Details
Screencast of the error (785.71 KB, video/webm)
2026-03-17 10:34 UTC, Jeppe Bundsgaard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeppe Bundsgaard 2026-03-04 10:54:27 UTC
Created attachment 205918 [details]
Bug shown

When writing a one-letter word (e.g. I) and then a space in the beginning of a paragraph, the space is removed. It is not removed after a comma or full stop.

Steps to reproduce:
1. Write "I am". result: space removed.

Workaround:
Untick ”Remove space and tab at beginning and end of paragraph”.
Comment 1 bnhep 2026-03-17 00:41:23 UTC
Unfortunately it hasn't been possible for me to reproduce the problem in my versions with the provided instructions. If possible, create and attach a screencast showing the steps you took when creating the attached document.

There are various free screencast software available for use, including Camstudio (Windows), Jing (Mac), Simple Screen Recorder (Linux) or screencast-o-matic.com (Web).

Version: 26.2.1.2 (X86_64)
Build ID: 620(Build:2)
CPU threads: 24; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: bb24b8ec8f8a3bef6efece607479fff9541e30ff
CPU threads: 24; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 2 Jeppe Bundsgaard 2026-03-17 10:34:30 UTC
Created attachment 206228 [details]
Screencast of the error
Comment 3 Buovjaga 2026-04-26 16:49:39 UTC
I noticed this when working on a document. It is impossible to type a space, it just keeps getting removed. Surely this is not the intended result. This is so disruptive that I will raise the priority.

You need to have Tools - AutoCorrect - While typing activated. In AutoCorrect Options - Options, you need to have these checked in the Typing column:
* Delete spaces and tabs at beginning and end of paragraph
* Bulleted and numbered lists. Bullet symbol:
* Bulleted and numbered lists immediate after pressing space

Checked with linux-64-26.2 that this is due to 5bd1efb830400e1394d45f122faf7537e4451f33
tdf#168228 Don't replace styles unconditionally

Also repro on Windows.
Comment 4 Julien Nabet 2026-04-30 14:56:12 UTC
(In reply to Buovjaga from comment #3)
> I noticed this when working on a document. It is impossible to type a space,
> it just keeps getting removed. Surely this is not the intended result. This
> is so disruptive that I will raise the priority.
> 
> You need to have Tools - AutoCorrect - While typing activated. In
> AutoCorrect Options - Options, you need to have these checked in the Typing
> column:
> * Delete spaces and tabs at beginning and end of paragraph
> * Bulleted and numbered lists. Bullet symbol:
> * Bulleted and numbered lists immediate after pressing space
> 
> Checked with linux-64-26.2 that this is due to
> 5bd1efb830400e1394d45f122faf7537e4451f33
> tdf#168228 Don't replace styles unconditionally
> 
> Also repro on Windows.

Are you sure about this commit? I wonder if it could rather be https://gerrit.libreoffice.org/c/core/+/156616

"Autocorrect: Add option for autoformat bulleted lists after space

Enable option in Autocoorect => bulleted lists after pressing space
Example: press * or - and space will change into bullets"
Comment 5 Neil Roberts 2026-05-15 17:14:38 UTC
I had a go at fixing it here: https://gerrit.libreoffice.org/c/core/+/205225
Comment 6 Commit Notification 2026-05-19 06:38:22 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b16d490e5a894efbc17e221e73be567882ce2fc3

tdf#171135 Disable unrelated auto-format options when making bullets

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2026-05-19 17:58:29 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ab4a8410688caf8311c3cec0ab13c9c1c7051c14

tdf#171135 Disable unrelated auto-format options when making bullets

It will be available in 26.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.