sw/source/core/edit/autofmt.cxx
@@ -181,6 +181,9 @@ class SwAutoFormat
     bool DeleteJoinCurNextPara(SwTextFrame const* pNextFrame, bool bIgnoreLeadingBlanks = false);
     /// delete in the node start and/or end
     void DeleteLeadingTrailingBlanks( bool bStart = true, bool bEnd = true );
+    // deletes trailing blanks regardless of what the config says. returns whether any blanks were
+    // actually removed.
+    bool DeleteTrailingBlanksNoConfig();
     void DelEmptyLine( bool bTstNextPara = true );
     /// when using multiline paragraphs delete the "left" and/or
     /// "right" margins
@@ -1083,6 +1086,24 @@ bool SwAutoFormat::IsSentenceAtEnd(const SwTextFrame & rTextFrame)
     return '.' == rStr[ n ];
 }
 
+bool SwAutoFormat::DeleteTrailingBlanksNoConfig()
+{
+    TextFrameIndex nPos(TextFrameIndex(GetTrailingBlanks(m_pCurTextFrame->GetText())));
+
+    if (TextFrameIndex(m_pCurTextFrame->GetText().getLength()) != nPos)
+    {
+        *m_aDelPam.GetPoint() = m_pCurTextFrame->MapViewToModelPos(
+                TextFrameIndex(m_pCurTextFrame->GetText().getLength()));
+        m_aDelPam.SetMark();
+        *m_aDelPam.GetPoint() = m_pCurTextFrame->MapViewToModelPos(nPos);
+        DeleteSel( m_aDelPam );
+        m_aDelPam.DeleteMark();
+        return true;
+    }
+
+    return false;
+}
+
 /// Delete beginning and/or end in a node
 void SwAutoFormat::DeleteLeadingTrailingBlanks(bool bStart, bool bEnd)
 {
@@ -1107,17 +1128,8 @@ void SwAutoFormat::DeleteLeadingTrailingBlanks(bool bStart, bool bEnd)
         m_aDelPam.DeleteMark();
         bHasDeleted = true;
     }
-    nPos = TextFrameIndex(GetTrailingBlanks(m_pCurTextFrame->GetText()));
-    if (bEnd && TextFrameIndex(m_pCurTextFrame->GetText().getLength()) != nPos)
-    {
-        *m_aDelPam.GetPoint() = m_pCurTextFrame->MapViewToModelPos(
-                TextFrameIndex(m_pCurTextFrame->GetText().getLength()));
-        m_aDelPam.SetMark();
-        *m_aDelPam.GetPoint() = m_pCurTextFrame->MapViewToModelPos(nPos);
-        DeleteSel( m_aDelPam );
-        m_aDelPam.DeleteMark();
-        bHasDeleted = true;
-    }
+    if (bEnd)
+        bHasDeleted |= DeleteTrailingBlanksNoConfig();
 
     // feedback via infobar
     if (bHasDeleted)
@@ -1528,7 +1540,7 @@ void SwAutoFormat::BuildEnum( sal_uInt16 nLvl, sal_uInt16 nDigitLevel )
 
     // only delete blanks if something else (numbering or style) is going to be changed
     if (m_aFlags.bSetNumRule || !m_aFlags.bAFormatByInput || m_aFlags.bReplaceStyles)
-        DeleteLeadingTrailingBlanks();
+        DeleteTrailingBlanksNoConfig();
 
     bool bChgBullet = false, bChgEnum = false;
     TextFrameIndex nAutoCorrPos(0);
